--- a/Quran_Memorizing_System/Pages/Exam.cshtml
+++ b/Quran_Memorizing_System/Pages/Exam.cshtml
@@ -42,7 +42,7 @@
                             <label for="q@(i + 1)text" class="form-label visually-hidden">Question @(i + 1) answer</label>
                             <textarea class="form-control border-0"
                               id="q@(i + 1)text"
-                              name="q@(i + 1)"
+                              name="Questions[@i].CorrectAnswerText"
                               rows="5"
                               placeholder="Enter the answer"></textarea>
                         </div>
