--- a/Quran_Memorizing_System/Pages/ViewAllrequests.cshtml
+++ b/Quran_Memorizing_System/Pages/ViewAllrequests.cshtml
@@ -18,8 +18,10 @@
                 <div class="request-info">
                     <p><strong>Email:</strong> @session["participant_email"]</p>
                     <p><strong>Session date:</strong> @session["session_date"]</p>
-                    <p><strong>Start page:</strong> @session["start_page"]</p>
-                    <p><strong>End page:</strong> @session["end_page"]</p>
+                    <p><strong>Start:</strong> @session["start_page"]</p>
+                    <p><strong>End:</strong> @session["end_page"]</p>
+                    <p><strong>Sura:</strong> @session["sura_text"]</p>
+                    <p><strong>Type: </strong> @session["section_type"]</p>
                 </div>
 
                 <div class="request-actions">
