--- a/Quran_Memorizing_System/Pages/Home.cshtml
+++ b/Quran_Memorizing_System/Pages/Home.cshtml
@@ -74,29 +74,61 @@
                     </div>
                 </form>
             </div>
-            <!-- View Created Exams -->
-            <div class="col-md-2 m-4">
-                <div class="p-3 notifications-card">
-                    <div class="mt-3 d-flex justify-content-center">
-                        <a asp-page="/ViewCreatedExams" class="btn btn-outline-secondary">
-                            View Created Exams
-                        </a>
-                    </div>
-                </div>
-            </div>
-        }
-        @if (HttpContext.Session.GetString("email") != null)
-        {            
-            <div class="col-md-2 m-4">
-                <div class="p-3 notifications-card">
-                    <div class="mt-3 d-flex justify-content-center">
-                        <a asp-page="/all_performance" class="btn btn-outline-secondary">
-                            Show All Performance
-                        </a>
-                    </div>
-                </div>
-            </div>
         }
 
     </div>
+    
+    <div class="col-md-2 m-4">
+        @if (Model.user.role == "Admin")
+        {
+            <div class="p-3 notifications-card">
+                <div class="mt-3 d-flex justify-content-center">
+                    <a asp-page="/AdmitSheikh" class="btn btn-outline-success">
+                        <i class="bi bi-person-plus me-1"></i>Admit Shieks
+                    </a>
+                </div>
+                <div class="mt-3 d-flex justify-content-center">
+                    <a asp-page="/AdminDashboard" class="btn btn-outline-primary">
+                        <i class="bi bi-speedometer2 me-1"></i>Dashboard
+                    </a>
+                 </div>
+            </div>
+        }
+        else if (Model.user.role == "Sheikh" && Model.user.isverified)
+        {
+            <!-- View Created Exams -->
+            <div class="p-3 notifications-card">
+                <div class="mt-3 d-flex justify-content-center">
+                    <a asp-page="/ViewCreatedExams" class="btn btn-outline-secondary">
+                        View Created Exams
+                    </a>
+                </div>
+                <div class="mt-3 d-flex justify-content-center">
+                    <a href="/ViewAllrequests" class="btn btn-outline-primary">
+                        <i class="bi bi-list-check me-1"></i>Pending Sessions
+                    </a>
+                </div>
+            </div>
+        }
+        else if (HttpContext.Session.GetString("email") != null && HttpContext.Session.GetString("role") == "Participant")
+        {
+            <div class="p-3 notifications-card">
+                <div class="mt-3 d-flex justify-content-center">
+                <a asp-page="/ViewRequestedSessions" class="btn btn-outline-primary">
+                    <i class="bi bi-calendar-event me-1"></i>Requested Sessions
+                </a>
+            </div>
+                <div class="mt-3 d-flex justify-content-center">
+                    <a asp-page="/AvailableExams" class="btn btn-outline-success">
+                        <i class="bi bi-journal-text me-1"></i>Exams
+                    </a>
+                 </div>
+                <div class="mt-3 d-flex justify-content-center">
+                    <a asp-page="/all_performance" class="btn btn-outline-secondary">
+                        Show All Performance
+                    </a>
+                </div>
+            </div>
+        }
+        </div>
 </div>
