--- a/Quran_Memorizing_System/Pages/all_performance.cshtml
+++ b/Quran_Memorizing_System/Pages/all_performance.cshtml
@@ -36,10 +36,10 @@
                             <td data-label="Exam Title" class="fw-semibold">@Model.Examtitles[i]</td>
                                 <td data-label="Rating" class="text-center">
                                     <div class="d-flex justify-content-center align-items-center perf-rating">
-                                        <div class="rating-number me-3 text-muted">@Model.submission[i][0]</div>
+                                        <div class="rating-number me-3 text-muted">@Model.submission.Rows[i][0]</div>
                                     </div>
                                 </td>
-                                <td data-label="Sheikh Email">@Model.submission[i]["Sh_Email"]</td>
+                                <td data-label="Sheikh Email">@Model.submission.Rows[i]["Sh_Email"]</td>
                             </tr>
                         }
                     </tbody>
